<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.fiappostech</groupId>
	<artifactId>fastfood</artifactId>
	<version>0.4.2</version>
	<name>fastfood</name>
	<description>Tech Challenge project for Spring Boot</description>

	<properties>
		<java.version>22</java.version>
	</properties>

	<dependencies>
		<!-- <dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
			<scope>runtime</scope>
		</dependency> -->

		<!-- <dependency>
			<groupId>org.crac</groupId>
			<artifactId>crac</artifactId>
		</dependency> -->

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
      	<groupId>org.springdoc</groupId>
      	<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      	<version>2.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-indexer</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<!-- <exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
		  	</exclusions> -->
		</dependency>

		<!-- <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-undertow</artifactId>
		</dependency> -->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.hibernate.orm.tooling</groupId>
				<artifactId>hibernate-enhance-maven-plugin</artifactId>
				<version>${hibernate.version}</version>
				<executions>
					<execution>
						<id>enhance</id>
						<goals>
							<goal>enhance</goal>
						</goals>
						<configuration>
							<enableLazyInitialization>true</enableLazyInitialization>
							<enableDirtyTracking>true</enableDirtyTracking>
							<enableAssociationManagement>true</enableAssociationManagement>
							<enableExtendedEnhancement>false</enableExtendedEnhancement>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>

					<layers>
						<enabled>true</enabled>
					</layers>

					<docker>
						<!-- <host>unix:///run/user/1000/podman/podman.sock</host> -->
						<bindHostToBuilder>true</bindHostToBuilder>
				  	</docker>

					<image>
						<builder>paketobuildpacks/builder:tiny</builder>
						<env>
							<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
						</env>
					</image>

					<jvmArguments>
						-Dserver.port=8080
						-Dfile.encoding=UTF-8
						-Dspring.backgroundpreinitializer.ignore=true
						-Xdebug -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
						<!-- -agentlib:native-image-agent=config-output-dir=target/native-image -->
						<!-- -XX:+UseContainerSupport -Xmx300m -Xss512k -XX:CICompilerCount=2 -->
						<!-- -verbose:gc -XX:+PrintGCDetails -->
					</jvmArguments>

					<systemPropertyVariables>
						<springAot>true</springAot>
					</systemPropertyVariables>
				</configuration>

				<executions>
					<execution>
						<id>process-aot</id>
						<goals>
							<goal>process-aot</goal>
						</goals>
						<configuration>
							<profiles>prod</profiles>
					  </configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
				<configuration>
					<fallback>false</fallback>
					<!-- <verbose>true</verbose> -->
					<!-- <quickBuild>true</quickBuild> -->
					<buildArgs>
						<buildArg>--color=always</buildArg>
						<!-- <buildArg>- -enable-sbom=cyclondx,strict,hierarchical</buildArg> -->
						<buildArg>-J-XX:MaxRAMPercentage=80.0</buildArg>
						<buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
						<!-- <buildArg>- -enable-preview</buildArg> -->
						<buildArg>--strict-image-heap</buildArg>
						<!-- <buildArg>- -static - -libc=musl</buildArg> -->
						<!-- <buildArg>-H:+StaticExecutableWithDynamicLibC</buildArg> -->
						<buildArg>-march=native</buildArg>
						<buildArg>--gc=parallel</buildArg>
						<!-- <buildArg>-gc=G1</buildArg> -->
					</buildArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- <repositories>
		<repository>
		  	<id>spring-milestones</id>
		  	<name>Spring Milestones</name>
		  	<url>https://repo.spring.io/milestone</url>
		  	<snapshots>
			 	<enabled>false</enabled>
		  	</snapshots>
		</repository>
		<repository>
		  	<id>spring-snapshots</id>
		  	<name>Spring Snapshots</name>
		  	<url>https://repo.spring.io/snapshot</url>
		  	<releases>
			 	<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
		  	<id>spring-milestones</id>
		  	<name>Spring Milestones</name>
		  	<url>https://repo.spring.io/milestone</url>
		  	<snapshots>
			 	<enabled>false</enabled>
		  	</snapshots>
		</pluginRepository>
		<pluginRepository>
		  	<id>spring-snapshots</id>
		  	<name>Spring Snapshots</name>
		  	<url>https://repo.spring.io/snapshot</url>
		  	<releases>
			 	<enabled>false</enabled>
		  	</releases>
		</pluginRepository>
	 </pluginRepositories> -->
</project>